Bug 434187: fixed a MSVC compiler warning about signed/unsigned comparison. r=nelson